<resources>
    <string name="app_name">OnlinePhonesShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explorer_title">Explorer</string>
    <string name="count_text">2</string>
    <string name="location_text">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones_category">Phones</string>
    <string name="search">Search</string>
    <string name="see_more">see more</string>
    <string name="price_text">1047</string>
    <string name="char_price">$</string>
    <string name="sale_info_text"><strike> $1500 </strike></string>
    <string name="phone_info_text">Samsung Galaxy s20 Ultra</string>
    <string name="phone_image">Phone Image</string>
    <string name="best_seller_text">Best Seller</string>
    <string name="hot_sales_text">Hot Sales</string>
    <string name="gps_location">gps location</string>
    <string name="gps_location2">gps_location2</string>
    <string name="qr_button">qr_button</string>
    <string name="product_details">Product Details</string>
    <string name="done_text">Done</string>
    <string name="filter_options_text">Filter options</string>
    <string name="close_filter">close_filter</string>
    <string name="brand_text_filter">Brand</string>
    <string name="filter_size_text">Size</string>
    <string name="filter_price_size">Price</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="no_data_available">no data available</string>
    <string name="add_to_cart_1_500_00">Add to Cart $1,500.00</string>
    <string name="exynos_990">Exynos 990</string>
    <string name="_108_12_mp">108 + 12 mp</string>
    <string name="_8_gb">8 GB</string>
    <string name="_256_gb">256 GB</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="basket">basket</string>
    <string name="account">account</string>
    <string name="favorite">favorite</string>
    <string name="ellipse">ellipse</string>
    <string name="button_back">button_back</string>
    <string name="sort_button">sort_button</string>
    <string name="galaxy_note_20_ultra">Galaxy Note 20 Ultra</string>
    <string name="_128_gb">128 gb</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="free">Free</string>
    <string name="_6_000">6,000</string>
    <string name="char_cost">$</string>
    <string name="us">us</string>
    <string name="_6000_00">$6000.00</string>
    <string name="_2">1</string>
    <string name="delete_button">delete_button</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="iphone_12">Iphone 12</string>
    <string name="s_per_mega_r_pido">Súper. Mega. Rápido.</string>
    <string name="buy_now">Buy now!</string>
    <string name="new_phone">new phone</string>
    <string name="shadow">shadow</string>
    <string name="textview">TextView</string>
    <string name="shop_text">Shop</string>
    <string name="oops">Oops!</string>
    <string name="your_internet_">Please check your internet settings and try again!</string>
    <string name="try_again">Try again</string>


    <string-array name="brand_array">
        <item> Samsung </item>
        <item>Apple</item>
        <item>Xiaomi</item>
    </string-array>

    <string-array name="price_array">
        <item>$0-$300</item>
        <item>$300-$700</item>
        <item>$700-$1000</item>
    </string-array>

    <string-array name="size_array">
        <item>4.5 to 5.5 inches</item>
        <item>5.5 to 6.0 inches</item>
        <item>6.0 to 6.8 inches</item>
    </string-array>
</resources>