<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="16dp"
    android:background="@color/dark_blue">


    <ImageView
        android:id="@+id/image_phone_basket"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/phone_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_phone_basket"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/mark_pro_medium"
        android:maxLines="2"
        android:text="@string/galaxy_note_20_ultra"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/image_phone_basket"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cost_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mark_pro_bold"
        android:text="@string/_6000_00"
        android:textColor="@color/peach"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_phone_basket"
        app:layout_constraintTop_toBottomOf="@+id/name_phone_basket" />

    <ImageButton
        android:id="@+id/delete_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/ic_remove_basket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/background_count_basket"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_phone_basket"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:contentDescription="@string/minus"
            android:padding="@dimen/margin8dp"
            android:src="@drawable/ic_line_minus" />

        <TextView
            android:id="@+id/count_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:contentDescription="@string/plus"
            android:padding="@dimen/margin8dp"
            android:src="@drawable/ic_plus_button" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>