<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.cartfragment.MyCartFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_30" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_30" />

        <ImageButton
            android:id="@+id/back_Button_bascet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@color/transparent"
            android:contentDescription="@string/button_back"
            android:src="@drawable/ic_back_button"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/basket_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@color/transparent"
            android:contentDescription="@string/basket"
            android:src="@drawable/ic_location_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:fontFamily="@font/mark_pro_medium"
            android:text="@string/add_address"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="@+id/basket_location_button"
            app:layout_constraintEnd_toStartOf="@+id/basket_location_button"
            app:layout_constraintTop_toTopOf="@+id/basket_location_button" />

        <TextView
            android:id="@+id/text_my_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_52"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/my_cart"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_size_35"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/back_Button_bascet" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/background_basket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_my_cart">

            <View
                android:id="@+id/line_bottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@color/gray"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/line_top"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@color/gray"
                app:layout_constraintBottom_toTopOf="@+id/total_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_32"
                android:background="@drawable/checkout_button_background"
                android:fontFamily="@font/mark_pro_bold"
                android:padding="10dp"
                android:text="@string/checkout"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/delivery_text"
                style="@style/deliver_style_text"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginBottom="@dimen/margin_24"
                android:text="@string/delivery"
                app:layout_constraintBottom_toTopOf="@+id/line_bottom"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/total_text"
                style="@style/deliver_style_text"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/total"
                app:layout_constraintBottom_toTopOf="@+id/delivery_text"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/free_text"
                style="@style/info_delivery_style"
                android:layout_marginEnd="@dimen/margin_65"
                android:layout_marginBottom="@dimen/margin_24"
                android:text="@string/free"
                app:layout_constraintBottom_toTopOf="@+id/line_bottom"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/char_cost"
                style="@style/info_delivery_style"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/char_cost"
                app:layout_constraintBottom_toTopOf="@+id/free_text"
                app:layout_constraintStart_toStartOf="@+id/free_text" />

            <TextView
                android:id="@+id/cost_text"
                style="@style/info_delivery_style"
                android:text="@string/_6_000"
                app:layout_constraintBottom_toBottomOf="@+id/char_cost"
                app:layout_constraintStart_toEndOf="@+id/char_cost"
                app:layout_constraintTop_toTopOf="@+id/char_cost" />

            <TextView
                android:id="@+id/currency_text"
                style="@style/info_delivery_style"
                android:layout_marginStart="2dp"
                android:text="@string/us"
                app:layout_constraintBottom_toBottomOf="@+id/cost_text"
                app:layout_constraintStart_toEndOf="@+id/cost_text"
                app:layout_constraintTop_toTopOf="@+id/cost_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_basket"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_60"
                app:layout_constraintBottom_toTopOf="@+id/line_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="2"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/basket_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/progress_layout"
            android:id="@+id/progress_bar_cart"
            android:visibility="invisible"/>

        <include layout="@layout/error_layout"
            android:id="@+id/error_layout_cart"
            android:visibility="invisible"/>




    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>