<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bottom_navigation_background">

        <ImageView
            android:id="@+id/shop_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32"
            android:src="@drawable/ic_shop"
            android:contentDescription="@string/basket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/favorite_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_explorer"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32"
            android:contentDescription="@string/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/favorite_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.493"
            app:srcCompat="@drawable/ic_account" />

        <ImageView
            android:id="@+id/favorite_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_32"
            android:contentDescription="@string/favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/account_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shop_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_favorite_button" />

        <ImageView
            android:id="@+id/ellipse_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:contentDescription="@string/ellipse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ellipse" />

        <TextView
            android:id="@+id/text_explorer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/explorer_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/ellipse_icon"
            app:layout_constraintStart_toEndOf="@+id/ellipse_icon"
            app:layout_constraintTop_toTopOf="@+id/ellipse_icon" />

        <TextView
            android:id="@+id/count_icon"
            android:layout_width="@dimen/margin_14"
            android:layout_height="@dimen/margin_14"
            android:background="@drawable/count_background"
            android:fontFamily="@font/mark_pro_medium"
            android:text="@string/count_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            app:layout_constraintBottom_toTopOf="@+id/shop_icon"
            app:layout_constraintStart_toEndOf="@+id/shop_icon"
            tools:ignore="SmallSp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>