<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_phone_item"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_8"
    app:cardUseCompatPadding="true"
    android:clickable="true"
    android:elevation="2dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/image_phone"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/phone_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <RadioButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@color/transparent"
            android:button="@color/transparent"
            android:drawableStart="@drawable/checked_favorite_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dollars_icon"
            style="@style/price_info_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:text="@string/char_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_phone" />

        <TextView
            android:id="@+id/price_info"
            style="@style/price_info_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_text"
            app:layout_constraintBottom_toBottomOf="@+id/dollars_icon"
            app:layout_constraintStart_toEndOf="@+id/dollars_icon"
            app:layout_constraintTop_toTopOf="@+id/dollars_icon" />

        <TextView
            android:id="@+id/price_sale_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:fontFamily="@font/mark_pro_medium"
            android:text="@string/sale_info_text"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintBaseline_toBaselineOf="@id/price_info"
            app:layout_constraintStart_toEndOf="@+id/price_info"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/phone_info_bestSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:fontFamily="@font/mark_pro_regular"
            android:text="@string/phone_info_text"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_info"
            tools:ignore="SmallSp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>