<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    tools:context="presentation.detailfragment.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageButton
            android:id="@+id/back_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/button_back"
            android:background="@color/transparent"
            android:src="@drawable/ic_back_button"
            app:layout_constraintStart_toStartOf="@+id/guideline_left_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/basket_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="-10dp"
            android:contentDescription="@string/basket"
            android:background="@color/transparent"
            android:src="@drawable/ic_basket_icon"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right_details"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mark_pro_medium"
            android:text="@string/product_details"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/basket_button"
            app:layout_constraintStart_toEndOf="@+id/back_Button"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_details"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_Button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progress_bar_load"
        layout="@layout/progress_bar"
        android:visibility="invisible" />


</FrameLayout>